# assessment_repo

./: .gitignore  README.md
src/moveit_config/: .setup_assistant  package.xml
src/moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml  xarm5.ros2_control.xacro  xarm5.srdf  xarm5.urdf.xacro
src/moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/pickplace/: package.xml  setup.py
src/pickplace/config/: xarm_controller.yaml
src/pickplace/launch/: xarm.launch.py
src/pickplace/pickplace/: box_publish.py  home_pos.py
src/pickplace/urdf/xarm5/: xarm5_gripper.urdf.xacro  xarm5_robot.urdf.xacro
src/pickplace/worlds/: empty.world
