<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pickplace</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="atharva.abhi.kulkarni@gmail.com">atharva</maintainer>
  <license>Apache-2.0</license>

    <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Required ROS 2 packages -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>gz-sim</exec_depend>
  <exec_depend>gz-transport</exec_depend>
  <exec_depend>gz-msgs</exec_depend>
  
  <!-- Core ROS 2 dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  
  <!-- Robot control dependencies -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  
  <!-- URDF processing -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  
  <!-- Launch file dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  
  <!-- Gazebo-ROS control -->
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>gz_ros2_control_demos</exec_depend>
  
  <!-- Optional visualization -->
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2run</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
